--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
