--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.0.1",
