--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.0.1",
     "@material-tailwind/react": "^2.1.10",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/uuid": "^10.0.0",
@@ -24,10 +24,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "dotenv": "^17.2.1",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "openai": "^5.5.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -60,8 +63,10 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-imagetools": "^8.0.0"
   }
 }
