--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "source-map-explorer dist/assets/*.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -64,6 +65,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "rollup-plugin-visualizer": "^6.0.3",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^5.4.8",
